--- a/README
+++ b/README
@@ -2,8 +2,10 @@
 
 `cp default.env .env`
 Edit `.env`
+`docker build keycloak_build -t ghcr.io/pccsuite/pcckeycloak`
 `docker compose up -d`
 
 ## Update
 `git pull`
-`docker compose up`
+`docker build keycloak_build -t ghcr.io/pccsuite/pcckeycloak`
+`docker compose up -d`
